--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@likashefqet/react-native-image-zoom": "^1.3.0",
     "@notifee/react-native": "^7.8.0",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/database": "^18.3.1",
