--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest 
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -11,6 +14,16 @@
       android:roundIcon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+          <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@mipmap/ic_launcher" />
+
+      <!-- <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@mipmap/ic_launcher_foreground" />
+        <meta-data
+         tools:replace="android:resource"
+  android:name="com.google.firebase.messaging.default_notification_color"
+  android:resource="@color/app_bg" /> -->
+  
         <activity
           android:name=".SplashActivity"
           android:theme="@style/SplashTheme"
