--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,8 @@ dependencies {
 
     implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
     implementation("com.google.firebase:firebase-analytics")
+        implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
+
    
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
