--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/flash-list": "^1.6.3",
     "add": "^2.0.6",
     "axios": "^1.4.0",
     "js-base64": "^3.7.5",
