--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@shopify/flash-list": "^1.6.3",
     "add": "^2.0.6",
     "axios": "^1.4.0",
+    "geolib": "^3.3.4",
     "js-base64": "^3.7.5",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "^5.1.6",
