--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-actions-sheet": "^0.9.2",
     "react-native-androw": "^0.0.34",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-big-list": "^1.6.1",
