--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.1",
     "react-native-mmkv": "^2.6.1",
