--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-uuid": "^2.0.1",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.7.5",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
