--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,12 +8,14 @@ xmlns:tools="http://schemas.android.com/tools"
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 <!-- android:networkSecurityConfig="@xml/network_security_config"  put under application for relese only to run run on local ip--> 
     <application
+android:networkSecurityConfig="@xml/network_security_config"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher"
       android:allowBackup="false"
-           
+
+
 
       android:theme="@style/AppTheme">
           <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
