--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,8 +4,8 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '13.0'
 
 # Enable modular headers globally
-use_modular_headers!
-# use_frameworks! :linkage => :static
+# use_modular_headers!
+use_frameworks! :linkage => :static
 
 prepare_react_native_project!
 
@@ -27,16 +27,16 @@ target 'MyProject' do
   )
 
   # Uncomment Firebase pods if required
-  pod 'Firebase/Core', :modular_headers => true
-  pod 'Firebase/Messaging', :modular_headers => true
-  pod 'Firebase/Auth', :modular_headers => true
+  # pod 'Firebase/Core', :modular_headers => true
+  # pod 'Firebase/Messaging', :modular_headers => true
+  # pod 'Firebase/Auth', :modular_headers => true
   # pod 'Firebase/Storage', :modular_headers => true
   # pod 'Firebase/Firestore', :modular_headers => true
   
 
   # Uncomment gRPC and BoringSSL-GRPC pods if required
-  pod 'gRPC-Core', :modular_headers => true
-  pod 'BoringSSL-GRPC', :modular_headers => true
+  # pod 'gRPC-Core', :modular_headers => true
+  # pod 'BoringSSL-GRPC', :modular_headers => true
 
 
   target 'MyProjectTests' do
